Updated to work in an iframe and on iOS 12 + 14

--- a/ios14test/styles.css
+++ b/ios14test/styles.css
@@ -1,7 +1,7 @@
 html {
     height: 100%;
+    width: 100%;
     background-color: #1d292c;
-    padding: env(safe-area-inset);
 }
 body {
     margin: 0;
